Style fixes: center alignment for empty panels

--- a/src/www/containers/dashboard/Dashboard.scss
+++ b/src/www/containers/dashboard/Dashboard.scss
@@ -19,6 +19,10 @@
     overflow: hidden;
     text-overflow: ellipsis;
   }
+  
+  .vertical {
+    text-align: center;
+  }
 
   &_main {
     max-width: 70vw;
